--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,14 @@ if(ENABLE_MYSQL)
     target_link_libraries(trojan ${MYSQL_LIBRARIES})
     add_definitions(-DENABLE_MYSQL)
 endif()
+# find libngtcp
+option(ENABLE_NGTCP2 "Build with ngtcp2 support" ON)
+if(ENABLE_NGTCP2)
+    find_package(NGTCP2 REQUIRED)  
+    target_include_directories(trojan PRIVATE ${NGTCP2_INCLUDE_DIRS})
+    target_link_libraries(trojan ${NGTCP2_LIBRARIES})
+    add_definitions(-DENABLE_NGTCP2)
+endif()
 
 option(FORCE_TCP_FASTOPEN "Force build with TCP Fast Open support" OFF)
 if(FORCE_TCP_FASTOPEN)
